--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,17 @@ body {
     background-color: #2c2d30;
 }
 
+.btnD{
+    font-size: 15px;
+    font-family: "montserrat";
+    text-decoration: none;
+    margin: 5px 0;
+    border: 4px solid #f50606;
+    padding: 4px 4px;
+    text-transform:uppercase;
+    font-weight: bolder;
+  }
+
 header {
     display: flex;
     justify-content: flex-end;
